Archive2/a9/cd2f502e8fca7a/output
main.cpp: In function 'void f(T)':
main.cpp:26:5: error: '::f_helper' has not been declared
     ::f_helper(typename T::tag_type{}); 
     ^
